# mdpkg

./: Cargo.toml  README.md  install.sh
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: etc-os-release-0.1.1.crate
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/et/c-/: etc-os-release
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/etc-os-release-0.1.1/: .cargo_vcs_info.json  Cargo.toml
src/: main.rs  utils.rs
src/backends/: apt.rs  mod.rs  pacman.rs  xbps.rs
src/core/: action.rs  backend.rs  env.rs  mod.rs  package.rs
