[package]
name = "multipkgdp"
version = "0.1.0"
edition = "2024"
description = "Pacman-style CLI that routes package operations to multiple Linux package manager backends (pacman/apt/xbps)."

[[bin]]
name = "multipkgdp"
path = "src/main.rs"

[[bin]]
name = "mpdpg"
path = "src/main.rs"

[[bin]]
name = "mdpkg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
etc-os-release = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
which = "7"
nix = { version = "0.30", default-features = false, features = ["user"] }
